--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "url-loader": "^4.1.1"
   },
   "resolutions": {
-    "aelf-sdk": "^3.3.0",
+    "aelf-sdk": "3.4.1",
     "@portkey/did-ui-react": "1.5.2-alpha.3"
   },
   "lint-staged": {
