--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-demo",
+  "name": "inscription-interface",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "aelf-web-login": "2.0.0-beta.11",
+    "@portkey-v1/contracts": "1.5.4-alpha.18",
+    "@portkey-v1/did-ui-react": "1.5.4-alpha.18",
+    "@portkey-v1/request": "1.5.4-alpha.18",
+    "@portkey-v1/services": "1.5.4-alpha.18",
+    "@portkey-v1/types": "1.5.4-alpha.18",
+    "@portkey-v1/utils": "1.5.4-alpha.18",
+    "@portkey/contracts": "2.0.0-alpha.19",
+    "@portkey/did-ui-react": "2.0.0-alpha.19",
+    "@portkey/request": "2.0.0-alpha.19",
+    "@portkey/services": "2.0.0-alpha.19",
+    "@portkey/types": "2.0.0-alpha.19",
+    "@portkey/utils": "2.0.0-alpha.19",
     "@apollo/client": "^3.8.8",
     "@aws-sdk/client-cognito-identity": "^3.410.0",
     "@aws-sdk/client-s3": "^3.410.0",
@@ -25,7 +38,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.86.0",
     "@types/lodash-es": "^4.17.9",
-    "aelf-web-login": "1.1.5-alpha.4",
     "antd": "^4.21.7",
     "axios": "^0.24.0",
     "eslint-plugin-no-inline-styles": "^1.0.5",
