--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "aelf-web-login": "2.0.0-beta.16",
+    "aelf-web-login": "2.0.0-beta.18",
     "@portkey-v1/contracts": "1.5.4-alpha.21",
     "@portkey-v1/did-ui-react": "1.5.4-alpha.21",
     "@portkey-v1/request": "1.5.4-alpha.21",
     "@portkey-v1/services": "1.5.4-alpha.21",
     "@portkey-v1/types": "1.5.4-alpha.21",
     "@portkey-v1/utils": "1.5.4-alpha.21",
-    "@portkey/contracts": "2.0.0-alpha.23",
-    "@portkey/did-ui-react": "2.0.0-alpha.23",
-    "@portkey/request": "2.0.0-alpha.23",
-    "@portkey/services": "2.0.0-alpha.23",
-    "@portkey/types": "2.0.0-alpha.23",
-    "@portkey/utils": "2.0.0-alpha.23",
+    "@portkey/contracts": "2.0.0-alpha.24",
+    "@portkey/did-ui-react": "2.0.0-alpha.24",
+    "@portkey/request": "2.0.0-alpha.24",
+    "@portkey/services": "2.0.0-alpha.24",
+    "@portkey/types": "2.0.0-alpha.24",
+    "@portkey/utils": "2.0.0-alpha.24",
     "@apollo/client": "^3.8.8",
     "@aws-sdk/client-cognito-identity": "^3.410.0",
     "@aws-sdk/client-s3": "^3.410.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.410.0",
     "@aws-sdk/lib-storage": "^3.412.0",
     "@ebay/nice-modal-react": "^1.2.10",
-    "@portkey/detect-provider": "^1.1.0",
-    "@portkey/provider-types": "^1.1.0",
+    "@portkey/detect-provider": "^2.0.0-alpha.5",
+    "@portkey/provider-types": "^2.0.0-alpha.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.86.0",
     "@types/lodash-es": "^4.17.9",
