--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "@portkey-v1/services": "1.5.4-alpha.22",
     "@portkey-v1/types": "1.5.4-alpha.22",
     "@portkey-v1/utils": "1.5.4-alpha.22",
-    "@portkey/contracts": "2.0.0-alpha.28",
-    "@portkey/detect-provider": "^2.0.0-alpha.5",
-    "@portkey/did-ui-react": "2.0.0-alpha.28",
-    "@portkey/provider-types": "^2.0.0-alpha.5",
-    "@portkey/request": "2.0.0-alpha.28",
-    "@portkey/services": "2.0.0-alpha.28",
-    "@portkey/types": "2.0.0-alpha.28",
-    "@portkey/utils": "2.0.0-alpha.28",
+    "@portkey/contracts": "2.1.0",
+    "@portkey/detect-provider": "2.1.0",
+    "@portkey/did-ui-react": "2.1.0",
+    "@portkey/provider-types": "2.1.0",
+    "@portkey/request": "2.1.0",
+    "@portkey/services": "2.1.0",
+    "@portkey/types": "2.1.0",
+    "@portkey/utils": "2.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.86.0",
     "@types/lodash-es": "^4.17.9",
