feat: upate aelf-web-login

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@portkey-v1/utils": "1.5.4-alpha.22",
     "@portkey/contracts": "2.0.0-alpha.28",
     "@portkey/detect-provider": "^2.0.0-alpha.5",
-    "@portkey/did-ui-react": "2.0.0-alpha.28",
+    "@portkey/did-ui-react": "2.6.6",
     "@portkey/provider-types": "^2.0.0-alpha.5",
     "@portkey/request": "2.0.0-alpha.28",
     "@portkey/services": "2.0.0-alpha.28",
@@ -38,7 +38,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.86.0",
     "@types/lodash-es": "^4.17.9",
-    "aelf-web-login": "^2.0.0-beta.25",
+    "aelf-web-login": "2.0.1-beta.15",
     "antd": "^4.21.7",
     "axios": "^0.24.0",
     "eslint-plugin-no-inline-styles": "^1.0.5",
