--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.410.0",
     "@aws-sdk/lib-storage": "^3.412.0",
     "@ebay/nice-modal-react": "^1.2.10",
-    "@portkey-v1/contracts": "1.5.4-alpha.22",
-    "@portkey-v1/did-ui-react": "1.5.4-alpha.22",
-    "@portkey-v1/request": "1.5.4-alpha.22",
-    "@portkey-v1/services": "1.5.4-alpha.22",
-    "@portkey-v1/types": "1.5.4-alpha.22",
-    "@portkey-v1/utils": "1.5.4-alpha.22",
-    "@portkey/contracts": "2.0.0-alpha.28",
-    "@portkey/detect-provider": "^2.0.0-alpha.5",
-    "@portkey/did-ui-react": "2.6.6",
-    "@portkey/provider-types": "^2.0.0-alpha.5",
-    "@portkey/request": "2.0.0-alpha.28",
-    "@portkey/services": "2.0.0-alpha.28",
-    "@portkey/types": "2.0.0-alpha.28",
-    "@portkey/utils": "2.0.0-alpha.28",
+    "@aelf-react/types": "^0.1.10",
+    "@aelf-web-login/utils": "^0.1.3-alpha.21",
+    "@aelf-web-login/wallet-adapter-base": "^0.2.2-alpha.4",
+    "@aelf-web-login/wallet-adapter-bridge": "^0.2.2-alpha.4",
+    "@aelf-web-login/wallet-adapter-night-elf": "^0.2.2-alpha.4",
+    "@aelf-web-login/wallet-adapter-portkey-aa": "^0.2.2-alpha.4",
+    "@aelf-web-login/wallet-adapter-portkey-discover": "^0.2.2-alpha.4",
+    "@aelf-web-login/wallet-adapter-react": "^0.2.2-alpha.4",
+    "@portkey/contracts": "2.7.1-alpha.3",
+    "@portkey/did-ui-react": "^2.15.10",
+    "@portkey/request": "2.2.0",
+    "@portkey/services": "2.2.0",
+    "@portkey/types": "2.15.2-alpha.0",
+    "@portkey/utils": "2.2.0",
+    "@portkey/detect-provider": "^2.1.0",
+    "@portkey/provider-types": "^2.2.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.86.0",
     "@types/lodash-es": "^4.17.9",
@@ -55,7 +57,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-use": "^17.4.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "aelf-sdk": "^3.2.40"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
@@ -96,9 +99,6 @@
     "tailwindcss": "^3.3.2",
     "typescript": "4.7.4",
     "url-loader": "^4.1.1"
-  },
-  "resolutions": {
-    "aelf-sdk": "3.4.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
